--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -23,16 +23,16 @@ jobs:
             - name: Enable Corepack & Install
               run: |
                   corepack enable
-                  pnpm install
+                  bun install
 
             - name: Lint
-              run: pnpm lint
+              run: bun lint
 
             - name: Format Check
-              run: pnpm format-check
+              run: bun format-check
 
             - name: Format
-              run: pnpm format
+              run: bun format
 
             - name: Build
-              run: pnpm build
+              run: bun build
