--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-    "name": "nextjs-starter-kit",
+    "name": "cric-auction",
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "bun lint && bun format &&  next build --turbopack",
+        "dev": "next dev",
+        "build": "bunx prisma generate && bun lint && bun format &&  next build",
         "start": "next start",
         "lint": "eslint",
         "check-format": "prettier --check .",
         "format": "prettier --write .",
         "prepare": "husky",
-        "db:generate": "prisma generate",
         "db:dev": "dotenv -e .env.development -- bunx prisma db push",
         "db:prod": "dotenv -e .env -- bunx prisma db push"
     },
@@ -20,6 +19,7 @@
     "dependencies": {
         "@hookform/resolvers": "^5.2.1",
         "@next/third-parties": "^15.5.2",
+        "@prisma/client": "6.16.2",
         "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.10",
