--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "lucide-react": "^0.544.0",
         "next": "15.5.4",
         "next-auth": "^4.24.11",
+        "next-cloudinary": "^6.16.0",
         "next-themes": "^0.4.6",
         "react": "19.1.1",
         "react-day-picker": "^9.11.0",
@@ -65,6 +66,7 @@
         "react-icons": "^5.5.0",
         "recharts": "3.2.1",
         "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2",
