feat: Integrate Cloudinary for image upload and deletion, update user and auction models to support image handling

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@tanstack/react-query-devtools": "^5.90.2",
         "axios": "^1.12.2",
         "class-variance-authority": "^0.7.1",
+        "cloudinary": "^2.7.0",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
